--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+
+.testimonial-section{
+	background-color:#f5f5f5;
+	padding:40px;
+}
+.testimonial-section h2{
+	margin-bottom:20px;
+}
+.testimonial{
+	padding:10px;
+	margin-bottom:10px;
+	border:1px solid black;
+	background-color:white;
+}
+.author{
+	text-align:right;
+	font-style:italic;
+}
